# sysmon

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/analytics/: anomaly_detector.cpp  anomaly_detector.hpp  history_buffer.cpp  history_buffer.hpp
src/collector/: cpu_collector.cpp  cpu_collector.hpp  memory_collector.cpp  memory_collector.hpp  process_collector.cpp  process_collector.hpp
src/engine/: cpu_engine.cpp  cpu_engine.hpp  process_engine.cpp  process_engine.hpp
src/logger/: logger.cpp  logger.hpp
src/ui/: tui.cpp  tui.hpp
